Update spec again
